# astra-driver

./: README.md  pyproject.toml
examples/: depth_array.py  view_ir.py
scripts/: install_winusb.ps1
src/astra_raw/: __init__.py  camera.py  cli.py  ir.py  packets.py  transport.py
tools/: show_depth.py
